Bug 14313 - svcctl ChangeServiceConfigW IDL is incorrect causing winexe to fail against windows
Summary: svcctl ChangeServiceConfigW IDL is incorrect causing winexe to fail against w...
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: DCE-RPCs and pipes (show other bugs)
Version: 4.12.0
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Karolin Seeger
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-03-05 11:54 UTC by Guenther Deschner
Modified: 2020-03-19 09:41 UTC (History)
2 users (show)

See Also:


Attachments
patch from master for v4.12 (15.73 KB, patch)
2020-03-10 12:33 UTC, Guenther Deschner
asn: review+
gd: ci-passed+
Details
patch from master for v4.11 (18.30 KB, patch)
2020-03-10 13:20 UTC, Guenther Deschner
asn: review+
gd: ci-passed+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Guenther Deschner 2020-03-05 11:54:14 UTC
IDL for svcctl_ChangeServiceConfigW is missing two DWORDs
Comment 1 Guenther Deschner 2020-03-10 12:33:58 UTC
Created attachment 15852 [details]
patch from master for v4.12
Comment 2 Guenther Deschner 2020-03-10 13:20:33 UTC
Created attachment 15853 [details]
patch from master for v4.11
Comment 3 Andreas Schneider 2020-03-12 07:34:51 UTC
Karolin, please apply the patches to the relevant branches. Thanks!
Comment 4 Karolin Seeger 2020-03-18 10:25:07 UTC
(In reply to Andreas Schneider from comment #3)
Pushed to autobuild-v4-{12,11}-test.
Comment 5 Karolin Seeger 2020-03-19 09:41:08 UTC
(In reply to Karolin Seeger from comment #4)
Pushed to both branches.
Closing out bug report.

Thanks!